hacemos un commit de todo

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,23 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+<ion-header>
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+       <ion-title>
+         Inicio
+       </ion-title>
     </ion-toolbar>
-  </ion-header>
+   </ion-header>
+   
+   <ion-content>
+    <div class="logo-container" style="text-align: center;">
+       <img src="../../assets/Imagenes/logo 1.svg" style="height: 100px; width: 100px;" alt="Logo">
+       <h1>Mascotas perdidas</h1>
+    </div>
+    <div class="button-container-fluid">
+      <div class="col">
+         <ion-button expand="full" routerLink="/publicar-mascotas-perdidas">Publicar mascotas perdidas</ion-button>
+      </div>
+      <div class="col">
+         <ion-button expand="full" routerLink="/ver-mascotas-perdidas">Ver mascotas perdidas</ion-button>
+      </div>
+    </div>
+   </ion-content>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
