--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,11 +1,7 @@
 #container {
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
   top: 50%;
-  transform: translateY(-50%);
+   
 }
 
 #container strong {
@@ -15,13 +11,25 @@
 
 #container p {
   font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
+  line-height: 22px;  
+  color: #e40b0b;
   margin: 0;
 }
 
 #container a {
   text-decoration: none;
+}
+.center-image{
+  display:flex;
+}
+.content-center{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center ;
+  height: 100vh;
+}
+.center-image {
+  max-width: 50%;
+  height: auto;
 }
