--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,10 +6,11 @@
     </ion-toolbar>
    </ion-header>
    
-   <ion-content>
+   <ion-content class="contenedor" style="background-color: aqua solid;">
     <div class="logo-container" style="text-align: center;">
+      <h1>Mascotas perdidas</h1>
        <img src="../../assets/Imagenes/logo 1.svg" style="height: 100px; width: 100px;" alt="Logo">
-       <h1>Mascotas perdidas</h1>
+       <p>Un lugar seguro para encontra tu mascota</p>
     </div>
     <div class="button-container-fluid">
       <div class="col">
