subiendo todos los cambios

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,14 +7,14 @@
    </ion-header>
    
    <ion-content class="contenedor" style="background-color: aqua solid;">
-    <div class="logo-container" style="text-align: center;">
+    <div class="logo-container" style="text-align: center;" class="d-flex-center">
       <h1>Mascotas perdidas</h1>
        <img src="../../assets/Imagenes/logo 1.svg" style="height: 100px; width: 100px;" alt="Logo">
        <p>Un lugar seguro para encontra tu mascota</p>
     </div>
     <div class="button-container-fluid">
       <div class="col">
-         <ion-button expand="full" routerLink="/publicar-mascotas-perdidas">Publicar mascotas perdidas</ion-button>
+         <ion-button expand="full" routerLink="/formpublicar ">Publicar mascotas perdidas</ion-button>
       </div>
       <div class="col">
          <ion-button expand="full" routerLink="/ver-mascotas-perdidas">Ver mascotas perdidas</ion-button>
