--- a/src/app/pages/formpublicar/formpublicar.page.html
+++ b/src/app/pages/formpublicar/formpublicar.page.html
@@ -14,48 +14,62 @@
 
   <ion-content style="justify-content: center;">
   <ion-grid style="width: 700px;">
-     <div style="text-align: center;background-color: #A0D2D6;">
+     <div [formGroup]="Mascota"  style="text-align: center;background-color: #A0D2D6;">
       <h1>Informacion de la mascota</h1>
        <ion-col size="12" size-md="6" size-lg="6">
-         <form style="background-color: #A0D2D6;"> 
+         <form  style="background-color: #A0D2D6;" > 
            <ion-item style="background-color: #A0D2D6;">
              <ion-label position="floating">Nombre de la mascota</ion-label>
-             <ion-input type="text"></ion-input>
+             <ion-input type="text" name="nombre" formControlName="nombre" ></ion-input>
            </ion-item>
            <ion-item>
              <ion-label position="floating">Raza</ion-label>
-             <ion-input type="text"></ion-input>
+             <ion-select name="raza" id="raza" formControlName="raza">
+                <ion-select-option value="caniche">Caniche</ion-select-option>
+                <ion-select-option value="foxterrier">Foxterrier</ion-select-option>
+                <ion-select-option value="labrador">Labrador</ion-select-option>
+                <ion-select-option value="salchicha">Salchicha</ion-select-option>
+                <ion-select-option value="chihuahua">Chihuahua</ion-select-option>
+                <ion-select-option value="otro">Otro</ion-select-option>
+             </ion-select>
            </ion-item>
            <ion-item>
              <ion-label position="floating">Tamaño</ion-label>
-             <ion-input type="text"></ion-input>
+             <ion-select type="text" name="tamaño" formControlName="tamaño">
+              <ion-select-option value="Pequeño">Pequeño</ion-select-option>
+              <ion-select-option value="Mediano">Mediano</ion-select-option>
+              <ion-select-option value="Grande ">Grande</ion-select-option>
+             </ion-select>
            </ion-item>
            <ion-item>
             <ion-label position="floating">Sexo</ion-label>
-            <ion-input type="text"></ion-input>
+            <ion-select type="text" formControlname="sexo">
+              <ion-select-option>Hembra</ion-select-option>
+              <ion-select-option>Macho</ion-select-option>
+            </ion-select>
           </ion-item>
            <ion-item>
              <ion-label position="floating">Descripcion</ion-label>
-             <ion-textarea></ion-textarea>
+             <ion-textarea type="text" formControlName="descripcion"></ion-textarea>
            </ion-item>
            <ion-item>
             <ion-label>Imagenes de la mascota</ion-label>
-            <ion-button slot="end" expand="full" fill="clear">Seleccionar</ion-button>
+            <ion-input type="text" formControlName="img"></ion-input>
           </ion-item>
            <h1>Ubicacion</h1>
            <ion-item>
             <ion-label position="floating">Ciudad</ion-label>
-            <ion-input type="text"></ion-input>
+            <ion-input type="text" formControlName="ciudad"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="floating">Barrio</ion-label>
-            <ion-input type="text"></ion-input>
+            <ion-input type="text" formControlName="barrio"></ion-input>
           </ion-item>
           <ion-item>
             <ion-label position="floating">Fecha de perdida</ion-label>
-            <ion-input type="text"></ion-input>
+            <ion-input type="text" formControlName="fecha"></ion-input>
           </ion-item>
-           <ion-button expand="block" type="submit">Enviar formulario</ion-button>
+           <ion-button expand="block" type="submit" (click)="agregarmascota()" >Enviar formulario</ion-button>
          </form>
        </ion-col>
      </div>
