--- a/src/global.scss
+++ b/src/global.scss
@@ -10,6 +10,8 @@
  */
 
 /* Core CSS required for Ionic components to work properly */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
 @import "@ionic/angular/css/core.css";
 
 /* Basic CSS for apps built with Ionic */
@@ -17,6 +19,7 @@
 @import "@ionic/angular/css/structure.css";
 @import "@ionic/angular/css/typography.css";
 @import "@ionic/angular/css/display.css";
+
 
 /* Optional CSS utils that can be commented out */
 @import "@ionic/angular/css/padding.css";
