--- a/src/app/pages/formpublicar/formpublicar.page.html
+++ b/src/app/pages/formpublicar/formpublicar.page.html
@@ -35,7 +35,7 @@
            </ion-item>
            <ion-item>
              <ion-label position="floating">Tamaño</ion-label>
-             <ion-select type="text" name="tamaño" formControlName="tamaño">
+             <ion-select type="text" name="tamaño" formControlName="tamano">
               <ion-select-option value="Pequeño">Pequeño</ion-select-option>
               <ion-select-option value="Mediano">Mediano</ion-select-option>
               <ion-select-option value="Grande ">Grande</ion-select-option>
