--- a/src/app/pages/cardmascotas/cardmascotas.page.html
+++ b/src/app/pages/cardmascotas/cardmascotas.page.html
@@ -10,16 +10,21 @@
       <ion-title size="large">cardmascotas</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-card>
-    <img alt="Silhouette of mountains" src="https://www.lavanguardia.com/files/image_948_465/uploads/2023/09/22/650d56b9c6606.jpeg" />
-    <ion-card-header>
-      <ion-card-title>Momo</ion-card-title>
-      <ion-card-subtitle>Perdido. 2 años</ion-card-subtitle>
-    </ion-card-header>
+  <div class="col" *ngFor="let publicacion of coleccionMascotas">
+     <ion-card>
+      <img alt="Silhouette of mountains"
+        src="{{publicacion.img}}" />
+      <ion-card-header>
+        <ion-card-title>{{publicacion.nombre}}</ion-card-title>
+        <ion-card-subtitle>{{publicacion.raza}}{{publicacion.sexo}} </ion-card-subtitle>
+      </ion-card-header>
 
-    <ion-card-content>
-      Momo se perdio el dd/mm/aa a las xx:xxhs, tiene 2 años de edad, es raza xxxx, de color negro y es amigable.
-      Es un miembro importante de la familia, si saben algo comuniquense al 2997393904.
-    </ion-card-content>
-  </ion-card>
+      <ion-card-content>
+        {{publicacion.descripcion}} {{publicacion.barrio}}
+
+        <ion-button ></ion-button>
+      </ion-card-content>
+    </ion-card>
+  </div>
+
 </ion-content>
