--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,10 +14,10 @@
     </div>
     <div class="button-container-fluid">
       <div class="col">
-         <ion-button expand="full" routerLink="/formpublicar ">Publicar mascotas perdidas</ion-button>
+         <ion-button expand="full" routerLink="/formpublicar">Publicar mascotas perdidas</ion-button>
       </div>
       <div class="col">
-         <ion-button expand="full" routerLink="/ver-mascotas-perdidas">Ver mascotas perdidas</ion-button>
+         <ion-button expand="full" routerLink="/cardmascotas">Ver mascotas perdidas</ion-button>
       </div>
     </div>
    </ion-content>
